unpackaged/main/default/objects/conference360__Event_Content__c/fields/conference360__Description__c.field-meta.xml
<CustomField>
    <fullName>conference360__Description__c</fullName>
    <inlineHelpText>A description of the Content.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>