unpackaged/main/default/objects/conference360__Event_Content__c/fields/conference360__Format__c.field-meta.xml
<CustomField>
    <fullName>conference360__Format__c</fullName>
    <label>Format</label>
    <length>255</length>
    <type>Text</type>
</CustomField>