unpackaged/main/default/objects/conference360__Event_Content__c/fields/conference360__Type2__c.field-meta.xml
<CustomField>
    <fullName>conference360__Type2__c</fullName>
    <description>The type of content.</description>
    <inlineHelpText>The type of content.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DOC</fullName>
            </value>
            <value>
                <fullName>HTML</fullName>
            </value>
            <value>
                <fullName>ODT</fullName>
            </value>
            <value>
                <fullName>PDF</fullName>
            </value>
            <value>
                <fullName>PPT</fullName>
            </value>
            <value>
                <fullName>TXT</fullName>
            </value>
            <value>
                <fullName>URL</fullName>
            </value>
            <value>
                <fullName>XLS</fullName>
            </value>
            <value>
                <fullName>XLXS</fullName>
            </value>
            <value>
                <fullName>ZIP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>