unpackaged/main/default/objects/conference360__Event_Content__c/fields/conference360__URL__c.field-meta.xml
<CustomField>
    <fullName>conference360__URL__c</fullName>
    <inlineHelpText>URL or hyperlink to the content.</inlineHelpText>
    <label>URL</label>
    <type>Url</type>
</CustomField>